// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.30.0

package postgres

import (
	"github.com/google/uuid"
	"github.com/jackc/pgx/v5/pgtype"
)

type Account struct {
	ID           uuid.UUID          `json:"id"`
	HouseholdID  uuid.UUID          `json:"household_id"`
	Name         string             `json:"name"`
	AccountType  string             `json:"account_type"`
	CurrencyCode string             `json:"currency_code"`
	Balance      int64              `json:"balance"`
	Status       string             `json:"status"`
	Version      int32              `json:"version"`
	CreatedAt    pgtype.Timestamptz `json:"created_at"`
	UpdatedAt    pgtype.Timestamptz `json:"updated_at"`
	CreatedBy    pgtype.UUID        `json:"created_by"`
	UpdatedBy    pgtype.UUID        `json:"updated_by"`
	DeletedAt    pgtype.Timestamptz `json:"deleted_at"`
}

type CreditCardSetting struct {
	ID          uuid.UUID          `json:"id"`
	AccountID   uuid.UUID          `json:"account_id"`
	ClosingDay  int32              `json:"closing_day"`
	DueDay      int32              `json:"due_day"`
	LimitAmount int64              `json:"limit_amount"`
	Version     int32              `json:"version"`
	CreatedAt   pgtype.Timestamptz `json:"created_at"`
	UpdatedAt   pgtype.Timestamptz `json:"updated_at"`
	CreatedBy   pgtype.UUID        `json:"created_by"`
	UpdatedBy   pgtype.UUID        `json:"updated_by"`
	DeletedAt   pgtype.Timestamptz `json:"deleted_at"`
}

type Household struct {
	ID        uuid.UUID          `json:"id"`
	Name      string             `json:"name"`
	Status    string             `json:"status"`
	Version   int32              `json:"version"`
	CreatedAt pgtype.Timestamptz `json:"created_at"`
	UpdatedAt pgtype.Timestamptz `json:"updated_at"`
	CreatedBy pgtype.UUID        `json:"created_by"`
	UpdatedBy pgtype.UUID        `json:"updated_by"`
	DeletedAt pgtype.Timestamptz `json:"deleted_at"`
}

type HouseholdMember struct {
	HouseholdID uuid.UUID          `json:"household_id"`
	UserID      uuid.UUID          `json:"user_id"`
	Role        string             `json:"role"`
	InvitedBy   pgtype.UUID        `json:"invited_by"`
	JoinedAt    pgtype.Timestamptz `json:"joined_at"`
	DeletedAt   pgtype.Timestamptz `json:"deleted_at"`
}

type User struct {
	ID           uuid.UUID          `json:"id"`
	Email        string             `json:"email"`
	PasswordHash string             `json:"password_hash"`
	DisplayName  string             `json:"display_name"`
	Version      int32              `json:"version"`
	CreatedAt    pgtype.Timestamptz `json:"created_at"`
	UpdatedAt    pgtype.Timestamptz `json:"updated_at"`
	CreatedBy    pgtype.UUID        `json:"created_by"`
	UpdatedBy    pgtype.UUID        `json:"updated_by"`
	DeletedAt    pgtype.Timestamptz `json:"deleted_at"`
}
